# modal-for-noobs

./: .copier-answers.yml  .env  .pre-commit-config.yaml  DEBUG_AUTH_README.md  PUBLISHING.md  README.md  README_PTBR.md  _copier_conf.yml  app.py  build_and_publish.sh  commit_and_publish.sh  commit_v025.sh  copier.yml  debug_modal_auth.py  debugging_auth.md  design_choices.md  hf_dash.py  mn.bat  mn.sh  modal_app.py  modal_app_fixed.py  modal_test_app.py  nc.bat  nc.sh  noxfile.py  old_cli.py  publish_v024.sh  pyproject.toml  quick_build.sh  render_templates.py  report_to_implement.md  run_debug_auth.py  setup_project.py  test_and_build.sh  test_app.py  test_dashboard.py  test_local.py  test_ui_migration.py
.claude/: CLAUDE.md  todos.md
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  FUNDING.yml
.taskmaster/: config.json
authentication_improvements/: __init__.py  client.py  config.py
book/: _config.yml
drop-ur-precious-stuff-here/: README.md  requirements.txt
examples/: modal_showcase_app.py  showcase_app.py
gradio-modal-deploy/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
gradio-modal-deploy/.github/workflows/: publish.yml  test.yml
gradio-modal-deploy/examples/: complete_example.py
gradio-modal-deploy/scripts/: publish.py
gradio-modal-deploy/src/gradio_modal_deploy/: __init__.py  components.py  core.py  decorators.py  themes.py  utils.py
gradio-modal-deploy/tests/: __init__.py  test_components.py  test_utils.py
scripts/: build_and_publish.sh
src/: easy-modal-complete.md  pyproject.toml  script.py  script_1.py  script_2.py  script_3.py  script_4.py  script_5.py  script_6.py  script_7.py
src/modal_for_noobs/: __init__.py  auth_manager.py  cli.py  cli_enhanced.py  complete_dashboard.py  config_loader.py  dashboard.py  dashboard_auth.py  easy_auth.py  easy_modal_cli.py  enhanced_dashboard.py  github_api.py  huggingface.py  modal_deploy.py  template_generator.py
src/modal_for_noobs/cli_helpers/: __init__.py  auth_helper.py  common.py  config_helper.py  logs_helper.py
src/modal_for_noobs/config/: base_packages.yml  deployment_examples.yml  modal_marketing.yml
src/modal_for_noobs/examples/: epic_green_simple_app.py  epic_green_tts_app.py  modal_epic_green_simple_app.py  modal_epic_green_tts_app.py  modal_examples_explorer.py  modal_simple_hello.py  modal_test_gradio_app.py  modal_ultimate_green_app.py  modal_ultimate_voice_green_app.py  neurotic_contract_app.py  showcase_app.py  simple_hello.py  test_gradio_app.py  ultimate_green_app.py  ultimate_voice_green_app.py
src/modal_for_noobs/templates/: __init__.py  dashboard.py
src/modal_for_noobs/templates/marimo/: deployment_template.py
src/modal_for_noobs/ui/: __init__.py  themes.py
src/modal_for_noobs/utils/: __init__.py  deployment.py  easy_cli_utils.py
src/tests/: conftest.py  test_async_operations.py  test_auth_improvements.py  test_cli.py  test_complete_dashboard.py  test_config.py  test_config_loader.py  test_dashboard.py  test_easy_cli_utils.py  test_modal_deploy.py  test_modal_deploy_async.py  test_notebooks.py  test_template_generator.py
tests/: plan_placeholder.txt  test_auth_manager.py  test_complete_dashboard.py  test_easy_auth.py
trash/: app.py  epic_green_simple_app.py  epic_green_tts_app.py  manage_keys.py  modal_epic_green_simple_app.py  modal_epic_green_tts_app.py  modal_examples_explorer.py  modal_modal_epic_green_simple_app.py  modal_modal_epic_green_tts_app.py  modal_modal_examples_explorer.py  modal_modal_simple_hello.py  modal_showcase_app.py  (+10 more)
(+14 files in other folders)
